<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_category"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_category_color"
            android:layout_width="16dp"
            android:layout_height="64dp"
            android:background="@color/dark_gray"
            android:contentDescription="@string/category_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/sf_pro_rounded_reguler"
            android:gravity="center_vertical"
            android:text="@string/category_name"
            android:textColor="@color/gray_25"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_category_color"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_delete_category"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/delete_category"
            android:src="@drawable/ic_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/edit_category"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_delete_category"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>