<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_food"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:backgroundTint="@color/white"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="16dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_category_color"
            android:layout_width="16dp"
            android:layout_height="80dp"
            android:background="@color/dark_gray"
            android:contentDescription="@string/category_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sf_pro_rounded_reguler"
            android:text="@string/food_name"
            android:textColor="@color/gray_25"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_category_color"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_food_quatity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_rounded_light"
            android:text="@string/food_qty"
            android:textColor="@color/gray_25"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tv_food_name"
            app:layout_constraintTop_toBottomOf="@id/tv_food_name" />

        <TextView
            android:id="@+id/tv_food_expired_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/sf_pro_rounded_reguler"
            android:text="@string/food_expired"
            android:textColor="@color/gray_25"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_food_name" />

        <TextView
            android:id="@+id/tv_food_days_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_rounded_light"
            android:text="@string/food_days_left"
            android:textColor="@color/gray_25"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/pb_food"
            app:layout_constraintEnd_toEndOf="@id/tv_food_expired_date" />

        <ProgressBar
            android:id="@+id/pb_food"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progressDrawable="@drawable/progressbar_food"
            app:layout_constraintEnd_toEndOf="@id/tv_food_expired_date"
            app:layout_constraintStart_toStartOf="@id/tv_food_name"
            app:layout_constraintTop_toBottomOf="@id/tv_food_quatity" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>