<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    tools:context=".ui.home.AddFoodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_add_food"
        style="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/add_food"
        app:titleMarginStart="102dp"
        app:titleTextColor="@color/gray_25" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_add_food">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ivory"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/form_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:elevation="2dp"
                android:paddingTop="16dp"
                android:paddingBottom="32dp">

                <TextView
                    android:id="@+id/tv_add_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:text="@string/title_food_name"
                    android:textColor="@color/gray_25"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_add_food_name"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit_text"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:hint="@string/hint_food_name"
                    android:inputType="none"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/gray_25"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_food_name" />

                <TextView
                    android:id="@+id/tv_add_food_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:text="@string/title_food_qty"
                    android:textColor="@color/gray_25"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_add_food_name" />

                <EditText
                    android:id="@+id/et_add_food_qty"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit_text"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:hint="@string/hint_food_qty"
                    android:inputType="none"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/gray_25"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/et_add_food_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_food_qty" />


                <TextView
                    android:id="@+id/tv_add_food_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:text="@string/title_food_category"
                    android:textColor="@color/gray_25"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_add_food_qty" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdown_category"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:focusableInTouchMode="true"
                    app:layout_constraintEnd_toEndOf="@id/et_add_food_qty"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_food_category">

                    <AutoCompleteTextView
                        android:id="@+id/category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownHeight="240dp"
                        android:fontFamily="@font/sf_pro_rounded_reguler"
                        android:hint="@string/hint_dropdown_category"
                        android:inputType="none"
                        android:textColor="@color/gray_25"
                        android:textColorHint="@color/gray_25"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_add_food_expired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:text="@string/title_food_expired"
                    android:textColor="@color/gray_25"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dropdown_category" />

                <EditText
                    android:id="@+id/et_add_food_expired"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit_text"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:hint="@string/hint_food_expired"
                    android:inputType="none"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/gray_25"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_food_expired" />

                <TextView
                    android:id="@+id/tv_add_food_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:text="@string/title_food_place"
                    android:textColor="@color/gray_25"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_add_food_expired" />

                <EditText
                    android:id="@+id/et_add_food_place"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit_text"
                    android:fontFamily="@font/sf_pro_rounded_reguler"
                    android:hint="@string/hint_food_place"
                    android:inputType="none"
                    android:lines="1"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/gray_25"
                    android:textColorHint="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_add_food_place" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_add_food"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_button"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sf_pro_rounded_medium"
                android:text="@string/add_food"
                android:textColor="@color/ivory"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/form_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>