<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ivory"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.scan.ScanActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_photo"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_image"
            android:contentDescription="@string/insert_image"
            android:padding="120dp"
            android:src="@drawable/ic_add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_insert_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_image"
            android:contentDescription="@string/insert_image"
            android:outlineProvider="background"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/sf_pro_rounded_medium"
        android:text="@string/scan_food"
        android:textColor="@color/ivory"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_photo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/sf_pro_rounded_medium"
        android:text="@string/take_photo"
        android:textColor="@color/ivory"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_scan"
        app:layout_constraintEnd_toStartOf="@id/btn_gallery"
        app:layout_constraintStart_toStartOf="@id/btn_scan" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_button"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/sf_pro_rounded_medium"
        android:text="@string/from_gallery"
        android:textColor="@color/ivory"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_photo" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/background_bottomnav"
        app:itemIconTint="@drawable/selector_item"
        app:itemTextColor="@drawable/selector_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>